Fix OuterCommandTests