@@ -2,6 +2,8 @@ package ru.hse.software.design.commands;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.OS;
+import ru.hse.software.design.Path;
 import ru.hse.software.design.streams.InputStream;
 import ru.hse.software.design.streams.OutputStream;
 
@@ -11,7 +13,6 @@ import java.io.PipedInputStream;
 import java.io.PipedOutputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -19,27 +20,23 @@ import java.util.List;
 public class OuterCommandTests {
     @Test
     public void testArguments() throws IOException {
+        Command command;
         PipedInputStream commandOutput = new PipedInputStream();
         PipedInputStream errorOutput = new PipedInputStream();
         PipedOutputStream commandInput = new PipedOutputStream();
-        Command command = new CatCommand(List.of("src/resources/not_empty_file.txt"), new InputStream(commandInput),
-            new OutputStream(commandOutput), new OutputStream(errorOutput));
-        String expectedOutput = Files.readString(Path.of("src/resources/not_empty_file.txt"), StandardCharsets.UTF_8) + System.lineSeparator();
+        if (OS.WINDOWS.isCurrentOs()) {
+            command = new OuterCommand("cmd.exe", Arrays.asList("/c", "echo", "123"),
+                new Path(System.getenv("PATH").split(System.getProperty("path.separator"))),
+                new InputStream(commandInput),
+                new OutputStream(commandOutput), new OutputStream(errorOutput));
+        } else {
+            command = new OuterCommand("echo", List.of("123"),
+                new Path(System.getenv("PATH").split(System.getProperty("path.separator"))),
+                new InputStream(commandInput),
+                new OutputStream(commandOutput), new OutputStream(errorOutput));
+        }
         commandInput.close();
         command.execute();
-        Assertions.assertEquals( expectedOutput, new String(commandOutput.readAllBytes(), StandardCharsets.UTF_8));
-    }
-
-    @Test
-    public void testReadFromStdin() throws IOException {
-        PipedInputStream commandOutput = new PipedInputStream();
-        PipedInputStream errorOutput = new PipedInputStream();
-        PipedOutputStream commandInput = new PipedOutputStream();
-        Command command = new CatCommand(Collections.emptyList(), new InputStream(commandInput),
-            new OutputStream(commandOutput), new OutputStream(errorOutput));
-        commandInput.write("hello world".getBytes(StandardCharsets.UTF_8));
-        commandInput.close();
-        command.execute();
-        Assertions.assertEquals("hello world", new String(commandOutput.readAllBytes(), StandardCharsets.UTF_8));
+        Assertions.assertEquals("123" + System.lineSeparator(), new String(commandOutput.readAllBytes(), StandardCharsets.UTF_8));
     }
 }
